# Intrusion-Detection-System

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  test_traffic.pcap
ids/: alert_system.py  config_loader.py  detection_engine.py  interface_utils.py  intrusion_detection_system.py  packet_capture.py  packet_filter.py  statistics_display.py  traffic_analyzer.py
ids.egg-info/: SOURCES.txt
tests/: run_all_tests.py  test_alerting.py  test_config.py  test_core_components.py  test_filtering.py  test_ids.py  test_ids.py.backup  test_interface_detection.py  test_statistics.py
